--- a/frontend/src/styles/reels.css
+++ b/frontend/src/styles/reels.css
@@ -25,7 +25,7 @@
 }
 .reel-overlay{
   position:absolute;
-  top:20px;
+  bottom:20px;
   left:16px;
   right:16px;
   z-index:10;
@@ -67,18 +67,56 @@
   width:max-content;
 }
 .foodpartner-profile{
+  padding: 14px;
   height:100vh;
   width:100%;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
-.foodpartner-image{
-  padding: 300px;
-  object-fit: cover;
-  height: 100px ;
-  width: 200px;
-  border-radius: 100%;
+.foodpartner-info{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
 
+  height: 27vh;
+  width: 100%;
+  background-color: black;
+}
+.foodpartner-image{
+  object-fit: cover;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+
+}
+.foodpartner-textinfo-username{
+ width: auto; 
+}
+.foodpartner-textinfo-address{
+width: 140px;
+height: auto;
+overflow-wrap: break-word;
+}
+.foopartner-video{
+  margin-top: 12px;
+  width:100%;
+  height: 100%;
+  background-color: black;
+}
+.profile-grid{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);  /* 2 items per row */
+  gap: 12px;
+  margin-top: 2px;
+  padding: 20px;
+   height: 80vh;
+  width: 100%;
+  background-color: black;
+}
+.profile-grid-video{
+  height: auto;
+  width: 140px;
 }
 
 
